2010-06-09  Khem Raj  <raj.khem@gmail.com>
	PR libstdc++/44461
	* libsupc++/eh_arm.cc (__cxa_end_cleanup): Use .pushsection/.popsection
	to emit inline assembly into .text section.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@160488 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-09  Khem Raj  <raj.khem@gmail.com>
+
+	PR libstdc++/44461
+	* libsupc++/eh_arm.cc (__cxa_end_cleanup): Use .pushsection/.popsection
+	to emit inline assembly into .text section.
+
 2010-06-09  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	Revert:
