2010-06-10  Paolo Carlini  <paolo.carlini@oracle.com>
	* include/std/tuple (tuple(const tuple&)): Define explicitly-defaulted.
	* testsuite/20_util/weak_ptr/comparison/cmp_neg.cc: Tweak dg-warning
	line number.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@160539 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2010-06-10  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	* include/std/tuple (tuple(const tuple&)): Define explicitly-defaulted.
+	* testsuite/20_util/weak_ptr/comparison/cmp_neg.cc: Tweak dg-warning
+	line number.
+
+2010-06-10  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	PR libstdc++/44487
 	* include/bits/stl_pair.h (pair(pair&&)): Remove.
 	(pair(pair<_U1, _U2>&&): Use forward, consistently with Bullet 5
