--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	* include/std/tuple (_Swallow_assign::operator=): Add const.
+	(ignore): Replace anonymous namespace member with const instance.
+
 2010-06-10  Suresh Gumpula  <suresh.gumpula@amd.com>
 
 	PR libstdc++/43918
