2010-06-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
	PR libstdc++/44268
	* doc/xml/manual/abi.xml: Fix libgcc version for hppa-linux.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@160617 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-06-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
+	PR libstdc++/44268
+	* doc/xml/manual/abi.xml: Fix libgcc version for hppa-linux.
+
+2010-06-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
 	* include/std/tuple (_Swallow_assign::operator=): Add const.
 	(ignore): Replace anonymous namespace member with const instance.
 
