2010-06-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
	* doc/xml/manual/appendix_contributing.xml: Indent code examples
	to match original C++STYLE document. Fix typos and syntax errors.
	Add some basic docbook markup.
	* doc/html/*: Regenerate.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@160620 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2010-06-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
+	* doc/xml/manual/appendix_contributing.xml: Indent code examples
+	to match original C++STYLE document. Fix typos and syntax errors.
+	Add some basic docbook markup.
+	* doc/html/*: Regenerate.
+
+2010-06-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
 	PR libstdc++/44268
 	* doc/xml/manual/abi.xml: Fix libgcc version for hppa-linux.
 
