--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2010-06-16  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/bits/stl_construct.h (_Construct): Change to variadic in
+	C++0x mode, consistently with allocator::construct.
+	* include/bits/stl_uninitialized.h (__uninitialized_copy_n): Use
+	_Construct.
+	(__uninitialized_construct_range): Move to...
+	* include/bits/stl_tempbuf.h (__uninitialized_construct_buf): ... here.
+
 2010-06-16  Matthias Klose  <doko@ubuntu.com>
 
 	* src/compatibility.cc: Export long double versions of "C" math
@@ -11,23 +20,28 @@
 	* testsuite/lib/prune.exp (dg-prune-output): New.
 	(libstdc++-dg-prune): Rename from prune_g++_output.
 	Add a bunch of prunes from gcc's prune.exp.
-	* testsuite/18_support/headers/cstdbool/std_c++0x_neg.cc: Remove dg-excess-errors.
+	* testsuite/18_support/headers/cstdbool/std_c++0x_neg.cc:
+	Remove dg-excess-errors.
 	* testsuite/18_support/headers/cstdint/std_c++0x_neg.cc: Likewise.
 	* testsuite/19_diagnostics/error_category/cons/copy_neg.cc: Likewise.
-	* testsuite/19_diagnostics/headers/system_error/std_c++0x_neg.cc: Likewise.
+	* testsuite/19_diagnostics/headers/system_error/std_c++0x_neg.cc:
+	Likewise.
 	* testsuite/20_util/declval/requirements/1_neg.cc: Likewise.
 	* testsuite/20_util/duration/requirements/typedefs_neg1.cc: Likewise.
 	* testsuite/20_util/duration/requirements/typedefs_neg3.cc: Likewise.
 	* testsuite/20_util/headers/type_traits/std_c++0x_neg.cc: Likewise.
 	* testsuite/20_util/make_signed/requirements/typedefs_neg.cc: Likewise.
-	* testsuite/20_util/make_unsigned/requirements/typedefs_neg.cc: Likewise.
+	* testsuite/20_util/make_unsigned/requirements/typedefs_neg.cc:
+	Likewise.
 	* testsuite/20_util/ratio/cons/cons_overflow_neg.cc: Likewise.
 	* testsuite/20_util/shared_ptr/assign/shared_ptr_neg.cc: Likewise.
 	* testsuite/20_util/shared_ptr/cons/43820.cc: Likewise.
 	* testsuite/23_containers/headers/array/std_c++0x_neg.cc: Likewise.
 	* testsuite/23_containers/headers/tuple/std_c++0x_neg.cc: Likewise.
-	* testsuite/23_containers/headers/unordered_map/std_c++0x_neg.cc: Likewise.
-	* testsuite/23_containers/headers/unordered_set/std_c++0x_neg.cc: Likewise.
+	* testsuite/23_containers/headers/unordered_map/std_c++0x_neg.cc:
+	Likewise.
+	* testsuite/23_containers/headers/unordered_set/std_c++0x_neg.cc:
+	Likewise.
 	* testsuite/26_numerics/headers/ccomplex/std_c++0x_neg.cc: Likewise.
 	* testsuite/26_numerics/headers/cfenv/std_c++0x_neg.cc: Likewise.
 	* testsuite/26_numerics/headers/ctgmath/std_c++0x_neg.cc: Likewise.
@@ -35,9 +49,12 @@
 	* testsuite/27_io/headers/cinttypes/std_c++0x_neg.cc: Likewise.
 	* testsuite/28_regex/headers/regex/std_c++0x_neg.cc: Likewise.
 	* testsuite/29_atomics/atomic/cons/copy_neg.cc: Likewise.
-	* testsuite/29_atomics/atomic_integral/operators/decrement_neg.cc: Likewise.
-	* testsuite/29_atomics/atomic_integral/operators/increment_neg.cc: Likewise.
-	* testsuite/30_threads/headers/condition_variable/std_c++0x_neg.cc: Likewise.
+	* testsuite/29_atomics/atomic_integral/operators/decrement_neg.cc:
+	Likewise.
+	* testsuite/29_atomics/atomic_integral/operators/increment_neg.cc:
+	Likewise.
+	* testsuite/30_threads/headers/condition_variable/std_c++0x_neg.cc:
+	Likewise.
 	* testsuite/30_threads/headers/future/std_c++0x_neg.cc: Likewise.
 	* testsuite/30_threads/headers/mutex/std_c++0x_neg.cc: Likewise.
 	* testsuite/30_threads/headers/thread/std_c++0x_neg.cc: Likewise.
@@ -45,7 +62,8 @@
 	* testsuite/ext/profile/mutex_extensions.cc: Likewise.
 	* testsuite/ext/type_traits/add_unsigned_floating_neg.cc: Likewise.
 	* testsuite/ext/type_traits/remove_unsigned_floating_neg.cc: Likewise.
-	* testsuite/tr1/2_general_utilities/shared_ptr/assign/shared_ptr_neg.cc: Likewise.
+	* testsuite/tr1/2_general_utilities/shared_ptr/assign/
+	shared_ptr_neg.cc: Likewise.
 	* testsuite/tr1/2_general_utilities/shared_ptr/cons/43820.cc: Likewise.
 
 2010-06-13  Paolo Carlini <paolo.carlini@oracle.com>
