--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-23  Paolo Carlini <paolo.carlini@oracle.com>
+
+	* include/bits/stl_tree.h (erase(iterator), erase(const_iterator)):
+	Remove inline specifier.
+
 2010-06-22  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* include/profile/impl/profiler_list_to_slist.h: Fix formatting,
