--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,32 @@
+2010-06-24  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/profile/impl/profiler_trace.h (__warning_data::
+	__warning_message): Change to std::string; clean-up includes,
+	qualify size_t, fprintf, etc, with std everywhere.
+	(struct __warn::operator()): Adjust.
+	* include/profile/impl/profiler_list_to_slist.h
+	(__list2slist_info::__advice): Change to return a std::string;
+	clean-up includes, qualify size_t, fprintf, etc, with std.
+	* include/profile/impl/profiler_container_size.h
+	(__container_size_info::__advice): Likewise.
+	* include/profile/impl/profiler_hash_func.h (__hashfunc_info::
+	__advice): Likewise.
+	* include/profile/impl/profiler_list_to_vector.h
+	(__list2vector_info::__advice): Likewise.
+	* include/profile/impl/profiler_vector_to_list.h
+	(__vector2list_info::__advice): Likewise.
+	* include/profile/impl/profiler_map_to_unordered_map.h
+	(__map2umap_info::__advice): Likewise.
+	* include/profile/impl/profiler.h: Likewise.
+	* include/profile/impl/profiler_hashtable_size.h: Likewise.
+	* include/profile/impl/profiler_node.h: Likewise.
+	* include/profile/impl/profiler_vector_size.h: Likewise.
+
+	* include/profile/iterator_tracker.h: Formatting and stylistic
+	tweaks.
+	* include/profile/base.h: Likewise.
+	* include/profile/map.h: Likewise.
+
 2010-06-23  Paolo Carlini <paolo.carlini@oracle.com>
 
 	* include/bits/stl_tree.h (erase(iterator), erase(const_iterator)):
