2010-06-25  Paolo Carlini  <paolo.carlini@oracle.com>
	* include/profile/impl/profiler_trace.h: Uglify it to __it, use
	everywhere std::size_t instead of size_t.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@161368 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-25  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/profile/impl/profiler_trace.h: Uglify it to __it, use
+	everywhere std::size_t instead of size_t.
+
 2010-06-24  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* include/profile/impl/profiler_trace.h (__trace_base<>::
