svn merge -r155227:155228 svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat/gcc-4_4-branch svn merge -r144577:144578 svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat/gcc-4_4-branch svn merge -r144573:144574 svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat/gcc-4_4-branch svn merge -r143387:143388 svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat/gcc-4_4-branch svn merge -r143376:143377 svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat/gcc-4_4-branch
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@161595 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_5-branch/gcc/po/fr.po
+++ b/gcc-4_5-branch/gcc/po/fr.po
@@ -29818,12 +29818,12 @@ msgstr ""
 #: cp/typeck.c:5481
 #, fuzzy, gcc-internal-format
 msgid "cast from type %qT to type %qT casts away qualifiers"
-msgstr "%S à partir du « %T » vers le type « %T » provoque un transtypage sans constante"
+msgstr "transtypage à partir du « %T » vers le type « %T » provoque un transtypage sans constante"
 
 #: cp/typeck.c:5486
 #, fuzzy, gcc-internal-format
 msgid "static_cast from type %qT to type %qT casts away qualifiers"
-msgstr "%S à partir du « %T » vers le type « %T » provoque un transtypage sans constante"
+msgstr "static_cast à partir du « %T » vers le type « %T » provoque un transtypage sans constante"
 
 #: cp/typeck.c:5491
 #, fuzzy, gcc-internal-format
