--- a/gcc-4_5-branch/boehm-gc/ChangeLog
+++ b/gcc-4_5-branch/boehm-gc/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* ia64_save_regs_in_stack.s: Moved to...
+	* ia64_save_regs_in_stack.S: ... this.  Add .note.GNU-stack
+	on Linux.
+
 2010-06-15  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* configure.ac (*-*-solaris2.8*): Only usr alternate thread
