--- a/gcc-4_5-branch/gcc/ada/ChangeLog
+++ b/gcc-4_5-branch/gcc/ada/ChangeLog
@@ -1,3 +1,11 @@
+2010-06-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* gnat_ugn.texi: Add : and . to direntry.
+	* gnat-style.texi: Change dircategory to GNU Ada tools.
+
+	* gcc-interface/Makefile.in (gnatlib-shared-default): Disallow
+	dlopening of libgnat.so.
+
 2010-04-25  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc-interface/trans.c (gnat_to_gnu) <N_Assignment_Statement>: Do not
