--- a/gcc-4_5-branch/gcc/po/sv.po
+++ b/gcc-4_5-branch/gcc/po/sv.po
@@ -3755,7 +3755,7 @@ msgstr "ogiltig operand till %%R"
 #: config/sh/sh.c:1152
 #, c-format
 msgid "invalid operand to %%S"
-msgstr "ogiltig operand till %%R"
+msgstr "ogiltig operand till %%S"
 
 #: config/sh/sh.c:8968
 msgid "created and used with different architectures / ABIs"
