--- a/gcc-4_5-branch/libffi/ChangeLog
+++ b/gcc-4_5-branch/libffi/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* src/powerpc/linux64.S: Add .note.GNU-stack on Linux.
+	* src/powerpc/linux64_closure.S: Likewise.
+	* src/ia64/unix.S: Likewise.
+
 2010-05-19  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* configure.ac (libffi_cv_as_x86_pcrel): Check for illegal in as
