--- a/gcc-4_5-branch/libjava/ChangeLog
+++ b/gcc-4_5-branch/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2010-06-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* configure.ac (toolexeclibdir, dbexecdir): Canonicalize /lib/../lib
+	to /lib.
+	* configure: Rebuilt.
+
+	* configure.host (slow_pthread_self): Set to empty unconditionally
+	on Linux targets.
+
 2010-06-11  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	Backport from mainline:
